fix n+1 in getUserBookings